@@ -33,6 +33,8 @@ import com.nedap.archie.rm.datavalues.quantity.DvInterval;
 import com.nedap.archie.rminfo.ArchieRMInfoLookup;
 import com.nedap.archie.rminfo.RMAttributeInfo;
 import com.nedap.archie.rminfo.RMTypeInfo;
+import java.io.IOException;
+import java.io.InputStream;
 import java.text.MessageFormat;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -45,18 +47,21 @@ import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
 import java.util.function.Function;
+import java.util.regex.Pattern;
 import java.util.stream.Collectors;
+import java.util.stream.IntStream;
 import java.util.stream.Stream;
 import org.apache.commons.lang3.StringUtils;
-import org.apache.commons.lang3.tuple.ImmutablePair;
 import org.apache.commons.lang3.tuple.Pair;
 import org.apache.xmlbeans.XmlCursor;
+import org.apache.xmlbeans.XmlException;
 import org.apache.xmlbeans.XmlObject;
 import org.apache.xmlbeans.XmlTokenSource;
 import org.ehrbase.openehr.sdk.aql.webtemplatepath.AqlPath;
 import org.ehrbase.openehr.sdk.terminology.TermDefinition;
 import org.ehrbase.openehr.sdk.terminology.TerminologyProvider;
 import org.ehrbase.openehr.sdk.terminology.ValueSet;
+import org.ehrbase.openehr.sdk.terminology.openehr.AttributeCodesets;
 import org.ehrbase.openehr.sdk.util.exception.SdkException;
 import org.ehrbase.openehr.sdk.util.rmconstants.RmConstants;
 import org.ehrbase.openehr.sdk.webtemplate.model.WebTemplate;
@@ -80,16 +85,15 @@ import org.openehr.schemas.v1.CCOMPLEXOBJECT;
 import org.openehr.schemas.v1.CDOMAINTYPE;
 import org.openehr.schemas.v1.CDVORDINAL;
 import org.openehr.schemas.v1.CDVQUANTITY;
-import org.openehr.schemas.v1.CDVSTATE;
 import org.openehr.schemas.v1.CMULTIPLEATTRIBUTE;
 import org.openehr.schemas.v1.COBJECT;
 import org.openehr.schemas.v1.CODEPHRASE;
 import org.openehr.schemas.v1.CPRIMITIVEOBJECT;
 import org.openehr.schemas.v1.CSINGLEATTRIBUTE;
-import org.openehr.schemas.v1.CodeDefinitionSet;
 import org.openehr.schemas.v1.DVCODEDTEXT;
 import org.openehr.schemas.v1.DVORDINAL;
 import org.openehr.schemas.v1.DVQUANTITY;
+import org.openehr.schemas.v1.FLATARCHETYPEONTOLOGY;
 import org.openehr.schemas.v1.IntervalOfInteger;
 import org.openehr.schemas.v1.OBJECTID;
 import org.openehr.schemas.v1.OPERATIONALTEMPLATE;
@@ -98,10 +102,14 @@ import org.openehr.schemas.v1.StringDictionaryItem;
 import org.openehr.schemas.v1.TATTRIBUTE;
 import org.openehr.schemas.v1.TCOMPLEXOBJECT;
 import org.openehr.schemas.v1.TCONSTRAINT;
+import org.openehr.schemas.v1.TERMINOLOGYID;
+import org.openehr.schemas.v1.TemplateDocument;
 import org.w3c.dom.Node;
 import org.w3c.dom.NodeList;
 
 public class OPTParser {
+
+    private record Name(String label, Map<String, String> localizedLabels) {}
 
     public static final String PATH_DIVIDER = "/";
     public static final ArchieRMInfoLookup ARCHIE_RM_INFO_LOOKUP = ArchieRMInfoLookup.getInstance();
@@ -109,16 +117,18 @@ public class OPTParser {
     public static final String CODED_TEXT = "CODED_TEXT";
     public static final String OPENEHR = "openehr";
     public static final String CURRENT_STATE = "current_state";
+    private static final String LOCAL_TERMINOLOGY = "local";
 
     private static final Set<String> LOCATABLE_TYPES =
             ArchieRMInfoLookup.getInstance().getTypeInfo(Locatable.class).getAllDescendantClasses().stream()
                     .map(RMTypeInfo::getRmName)
                     .collect(Collectors.toSet());
 
+    public static final Pattern NON_ALNUM = Pattern.compile("[^\\p{IsAlphabetic}0-9._\\-]");
+
     private final OPERATIONALTEMPLATE operationaltemplate;
     private final String defaultLanguage;
-    private final Map<String, String> defaultValues = new HashMap<>();
-    private final InputHandler inputHandler = new InputHandler(defaultValues);
+    private final InputHandler inputHandler;
     private final Map<String, Map<String, String>> annotationMap = new HashMap<>();
     private List<String> languages;
 
@@ -137,11 +147,23 @@ public class OPTParser {
     public OPTParser(OPERATIONALTEMPLATE operationaltemplate) {
         this.operationaltemplate = operationaltemplate;
         defaultLanguage = operationaltemplate.getLanguage().getCodeString();
-        Optional.ofNullable(operationaltemplate.getConstraints()).map(TCONSTRAINT::getAttributesArray).stream()
-                .flatMap(Arrays::stream)
-                .map(this::extractDefault)
-                .flatMap(List::stream)
-                .forEach(p -> defaultValues.put(p.getKey(), p.getValue()));
+
+        Map<String, String> defaultValues =
+                Optional.ofNullable(operationaltemplate.getConstraints()).map(TCONSTRAINT::getAttributesArray).stream()
+                        .flatMap(Arrays::stream)
+                        .flatMap(this::extractDefault)
+                        .collect(Collectors.toMap(Pair::getKey, Pair::getValue, (a, b) -> b));
+        inputHandler = new InputHandler(defaultValues);
+    }
+
+    public static WebTemplate parse(OPERATIONALTEMPLATE operationaltemplate) {
+        return new OPTParser(operationaltemplate).parse();
+    }
+
+    public static WebTemplate parse(InputStream in) throws XmlException, IOException {
+        try (in) {
+            return parse(TemplateDocument.Factory.parse(in).getTemplate());
+        }
     }
 
     public WebTemplate parse() {
@@ -150,14 +172,11 @@ public class OPTParser {
         webTemplate.setTemplateId(operationaltemplate.getTemplateId().getValue());
         webTemplate.setDefaultLanguage(defaultLanguage);
         webTemplate.setVersion("2.3");
-        webTemplate
-                .getLanguages()
-                .addAll(Arrays.stream(operationaltemplate.getDescription().getDetailsArray())
-                        .map(RESOURCEDESCRIPTIONITEM::getLanguage)
-                        .map(CODEPHRASE::getCodeString)
-                        .collect(Collectors.toSet()));
-
         languages = webTemplate.getLanguages();
+        languages.addAll(Arrays.stream(operationaltemplate.getDescription().getDetailsArray())
+                .map(RESOURCEDESCRIPTIONITEM::getLanguage)
+                .map(CODEPHRASE::getCodeString)
+                .collect(Collectors.toSet()));
 
         for (ANNOTATION annotation : operationaltemplate.getAnnotationsArray()) {
             Map<String, String> items = new HashMap<>();
@@ -168,79 +187,71 @@ public class OPTParser {
             annotationMap.put(annotation.getPath().replaceAll("^[^/]+", ""), items);
         }
 
-        webTemplate.setTree(parseCARCHETYPEROOT(operationaltemplate.getDefinition(), AqlPath.EMPTY_PATH)
-                .get(0));
+        webTemplate.setTree(parseCARCHETYPEROOT(operationaltemplate.getDefinition(), AqlPath.EMPTY_PATH)[0]);
         return webTemplate;
     }
 
-    static XmlObject[] extractChildren(XmlObject c, String attributes) {
-        return c.selectChildren("http://schemas.openehr.org/v1", attributes);
+    static Stream<XmlObject> extractChildren(XmlObject c, String attributes) {
+        return Arrays.stream(c.selectChildren("http://schemas.openehr.org/v1", attributes));
     }
 
-    private List<Pair<String, String>> extractDefault(TATTRIBUTE xmlObject) {
-        // XXX performance List<Pair<AqlPath, String>>
-        List<Pair<String, String>> defaults = new ArrayList<>();
+    private Stream<Pair<String, String>> extractDefault(TATTRIBUTE xmlObject) {
 
         String differentialPath = StringUtils.substringAfter(xmlObject.getDifferentialPath(), "/");
         String rmAttributeName = xmlObject.getRmAttributeName();
-        AqlPath aql = AqlPath.EMPTY_PATH.addEnd(differentialPath, rmAttributeName);
+        AqlPath aqlPath = AqlPath.EMPTY_PATH.addEnd(differentialPath, rmAttributeName);
 
         // Instead of handling each subtype of DATAVALUE ist handheld generic since each child is an
         // attribute of the DATAVALUE
-        List<String> attributeNames = Arrays.stream(xmlObject.getChildrenArray())
+        return Arrays.stream(xmlObject.getChildrenArray())
                 .map(TCOMPLEXOBJECT::getDefaultValue)
                 .map(XmlTokenSource::newDomNode)
                 .map(Node::getFirstChild)
                 .map(Node::getChildNodes)
-                .map(this::buildList)
-                .flatMap(List::stream)
+                .flatMap(OPTParser::elementNodes)
                 .map(Node::getNodeName)
-                .collect(Collectors.toList());
-
-        attributeNames.forEach(n -> {
-            Optional<XmlObject> any = Arrays.stream(xmlObject.getChildrenArray())
-                    .map(TCOMPLEXOBJECT::getDefaultValue)
-                    .map(x -> extractChildren(x, n))
-                    .flatMap(Arrays::stream)
-                    .findAny();
-            if (any.isPresent()) {
-                if (any.get().newDomNode().getFirstChild().getChildNodes().getLength() == 1) {
-
-                    String defaultValue = any.get().newCursor().getTextValue();
-
-                    defaults.add(new ImmutablePair<>(aql + "|" + n, defaultValue));
-                } else {
-                    String defaultValue = Arrays.stream(extractChildren(any.get(), "defining_code"))
-                            .findAny()
-                            .map(x -> extractChildren(x, "code_string"))
-                            .stream()
-                            .flatMap(Arrays::stream)
-                            .map(XmlTokenSource::newCursor)
-                            .map(XmlCursor::getTextValue)
-                            .findAny()
-                            .orElse("");
-                    defaults.add(new ImmutablePair<>(aql + "|" + "defining_code", defaultValue));
-                }
-            }
-        });
-        return defaults;
+                .map(nodeName -> getDefault(xmlObject, nodeName, aqlPath))
+                .filter(Objects::nonNull);
     }
 
-    private List<Node> buildList(NodeList list) {
-
-        List<Node> nodes = new ArrayList<>();
-        for (int i = 0; i < list.getLength(); i++) {
-            Node item = list.item(i);
-            if (item.getNodeType() == 1) {
-                nodes.add(item);
-            }
-        }
-        return nodes;
+    private static Pair<String, String> getDefault(TATTRIBUTE xmlObject, String nodeName, AqlPath aqlPath) {
+        return childByName(xmlObject, nodeName)
+                .map(any -> {
+                    String key;
+                    String defaultValue;
+                    if (any.newDomNode().getFirstChild().getChildNodes().getLength() == 1) {
+                        defaultValue = any.newCursor().getTextValue();
+                        key = aqlPath + "|" + nodeName;
+                    } else {
+                        defaultValue = extractChildren(any, "defining_code")
+                                .flatMap(x -> extractChildren(x, "code_string"))
+                                .map(XmlTokenSource::newCursor)
+                                .map(XmlCursor::getTextValue)
+                                .findAny()
+                                .orElse("");
+                        key = aqlPath + "|" + "defining_code";
+                    }
+                    return Pair.of(key, defaultValue);
+                })
+                .orElse(null);
     }
 
-    private List<WebTemplateNode> parseCARCHETYPEROOT(CARCHETYPEROOT carchetyperoot, AqlPath aqlPath) {
+    private static Optional<XmlObject> childByName(TATTRIBUTE xmlObject, String nodeName) {
+        return Arrays.stream(xmlObject.getChildrenArray())
+                .map(TCOMPLEXOBJECT::getDefaultValue)
+                .flatMap(x -> extractChildren(x, nodeName))
+                .findAny();
+    }
 
-        // extract local Terminologies
+    private static Stream<Node> elementNodes(NodeList list) {
+        return IntStream.range(0, list.getLength())
+                .mapToObj(list::item)
+                .filter(item -> item.getNodeType() == Node.ELEMENT_NODE);
+    }
+
+    private WebTemplateNode[] parseCARCHETYPEROOT(CARCHETYPEROOT carchetyperoot, AqlPath aqlPath) {
+
+        // extract local Terminologies code -> language -> TermDefinition
         Map<String, Map<String, TermDefinition>> termDefinitionMap = new HashMap<>();
         for (ARCHETYPETERM term : carchetyperoot.getTermDefinitionsArray()) {
             String code = term.getCode();
@@ -266,64 +277,55 @@ public class OPTParser {
         otherTermDefinitionMap.forEach((key, value) ->
                 termDefinitionMap.computeIfAbsent(key, c -> new HashMap<>()).putAll(value));
 
-        List<WebTemplateNode> nodes = parseCCOMPLEXOBJECT(carchetyperoot, aqlPath, termDefinitionMap, null);
-        nodes.forEach(node -> {
+        WebTemplateNode[] nodes = parseCCOMPLEXOBJECT(carchetyperoot, aqlPath, termDefinitionMap, null);
+        for (WebTemplateNode node : nodes) {
             node.setNodeId(carchetyperoot.getArchetypeId().getValue());
             addRMAttributes(node, aqlPath, termDefinitionMap);
-        });
+        }
 
         return nodes;
     }
 
     private Map<String, Map<String, TermDefinition>> buildOtherTerms(String archetypeId) {
         Map<String, Map<String, TermDefinition>> otherTermDefinitionMap = new HashMap<>();
-        List<CodeDefinitionSet> ontologies = new ArrayList<>();
 
-        ontologies.addAll(Optional.ofNullable(operationaltemplate.getOntology())
-                .filter(x -> Objects.equals(x.getArchetypeId(), archetypeId))
-                .map(ARCHETYPEONTOLOGY::getTermDefinitionsArray)
-                .stream()
-                .flatMap(Arrays::stream)
-                .collect(Collectors.toList()));
-        ontologies.addAll(Arrays.stream(operationaltemplate.getComponentOntologiesArray())
+        Stream<FLATARCHETYPEONTOLOGY> rootOntologies = Optional.ofNullable(operationaltemplate.getOntology()).stream();
+        Stream<FLATARCHETYPEONTOLOGY> componentOntologies =
+                Arrays.stream(operationaltemplate.getComponentOntologiesArray());
+
+        Stream.concat(rootOntologies, componentOntologies)
                 .filter(x -> Objects.equals(x.getArchetypeId(), archetypeId))
                 .map(ARCHETYPEONTOLOGY::getTermDefinitionsArray)
                 .flatMap(Arrays::stream)
-                .collect(Collectors.toList()));
+                .forEach(term -> {
+                    for (ARCHETYPETERM items : term.getItemsArray()) {
+                        TermDefinition termDefinition = toTermDefinition(items);
 
-        for (CodeDefinitionSet term : ontologies) {
-            String language = term.getLanguage();
-
-            for (ARCHETYPETERM items : term.getItemsArray()) {
-                String code = items.getCode();
-                String text = "";
-                String description = "";
-                for (StringDictionaryItem item : items.getItemsArray()) {
-                    String id = item.getId();
-
-                    String value = item.getStringValue();
-                    if (Objects.equals(id, "text")) {
-                        text = value;
-                    } else if (Objects.equals(id, "description")) {
-                        description = value;
+                        Map<String, TermDefinition> termDefinitionByLanguage =
+                                otherTermDefinitionMap.computeIfAbsent(termDefinition.getCode(), c -> new HashMap<>());
+                        termDefinitionByLanguage.put(term.getLanguage(), termDefinition);
                     }
-                }
-                Map<String, TermDefinition> termDefinitionMap =
-                        otherTermDefinitionMap.computeIfAbsent(code, c -> new HashMap<>());
-                termDefinitionMap.put(language, new TermDefinition(code, text, description));
-            }
-        }
+                });
 
         return otherTermDefinitionMap;
     }
 
-    private static class Name {
-
-        String label;
-        Map<String, String> localizedLabels;
+    private static TermDefinition toTermDefinition(ARCHETYPETERM items) {
+        String text = "";
+        String description = "";
+        for (StringDictionaryItem item : items.getItemsArray()) {
+            switch (item.getId()) {
+                case "text" -> text = item.getStringValue();
+                case "description" -> description = item.getStringValue();
+                default -> {
+                    /*noop*/
+                }
+            }
+        }
+        return new TermDefinition(items.getCode(), text, description);
     }
 
-    private List<WebTemplateNode> parseCCOMPLEXOBJECT(
+    private WebTemplateNode[] parseCCOMPLEXOBJECT(
             CCOMPLEXOBJECT ccomplexobject,
             AqlPath aqlPath,
             Map<String, Map<String, TermDefinition>> termDefinitionMap,
@@ -331,21 +333,17 @@ public class OPTParser {
 
         Optional<WebTemplateNode> nameNode = buildNameNode(aqlPath, termDefinitionMap, ccomplexobject);
 
-        List<Name> nameValues = nameNode.map(WebTemplateNode::getInputs).stream()
+        Name[] nameValues = nameNode.map(WebTemplateNode::getInputs).stream()
                 .flatMap(List::stream)
                 .filter(i -> i.getSuffix() == null || i.getSuffix().equals("code"))
                 .map(WebTemplateInput::getList)
                 .flatMap(List::stream)
-                .map(webTemplateInputValue -> {
-                    Name name = new Name();
-                    name.label = webTemplateInputValue.getLabel();
-                    name.localizedLabels = webTemplateInputValue.getLocalizedLabels();
-                    return name;
-                })
-                .collect(Collectors.toList());
+                .map(webTemplateInputValue ->
+                        new Name(webTemplateInputValue.getLabel(), webTemplateInputValue.getLocalizedLabels()))
+                .toArray(Name[]::new);
 
-        if (nameValues.size() > 1) {
-            return nameValues.stream()
+        if (nameValues.length > 1) {
+            return Arrays.stream(nameValues)
                     .map(e -> {
                         WebTemplateNode node =
                                 buildNodeWithName(ccomplexobject, aqlPath, termDefinitionMap, rmAttributeName, e);
@@ -356,31 +354,33 @@ public class OPTParser {
                                 ccomplexobject, node.getAqlPathDto(), termDefinitionMap, localNameNode, node);
                         return node;
                     })
-                    .toList();
+                    .toArray(WebTemplateNode[]::new);
 
         } else {
-            Optional<Name> explicitName = nameValues.stream().findAny();
+            Name explicitName = nameValues.length == 0 ? null : nameValues[0];
 
-            WebTemplateNode node = buildNodeWithName(
-                    ccomplexobject, aqlPath, termDefinitionMap, rmAttributeName, explicitName.orElse(null));
+            WebTemplateNode node =
+                    buildNodeWithName(ccomplexobject, aqlPath, termDefinitionMap, rmAttributeName, explicitName);
 
-            nameNode.ifPresent(n -> setExplicitName(explicitName.orElse(null), node, n));
+            nameNode.ifPresent(n -> setExplicitName(explicitName, node, n));
             addAnnotations(node, aqlPath.toString(), annotationMap);
             parseComplexObjectSingle(ccomplexobject, node.getAqlPathDto(), termDefinitionMap, nameNode, node);
-            return Collections.singletonList(node);
+            return new WebTemplateNode[] {node};
         }
     }
 
     private void addAnnotations(WebTemplateNode node, String aqlPath, Map<String, Map<String, String>> annotationMap) {
-        Map<String, String> annotationItems = annotationMap.get(aqlPath);
-        if (annotationItems != null) {
-            WebTemplateAnnotation annotation = node.getAnnotations();
-            if (annotation == null) {
-                annotation = new WebTemplateAnnotation();
-                node.setAnnotations(annotation);
-            }
-            annotation.getOther().putAll(annotationItems);
-        }
+        Optional.of(aqlPath).map(annotationMap::get).ifPresent(annotationItems -> {
+            Optional.of(node)
+                    .map(WebTemplateNode::getAnnotations)
+                    .orElseGet(() -> {
+                        var a = new WebTemplateAnnotation();
+                        node.setAnnotations(a);
+                        return a;
+                    })
+                    .getOther()
+                    .putAll(annotationItems);
+        });
     }
 
     private void setExplicitName(Name explicitName, WebTemplateNode node, WebTemplateNode n) {
@@ -436,19 +436,21 @@ public class OPTParser {
                 continue;
             }
 
-            List<WebTemplateNode> newChildren = new ArrayList<>();
+            List<WebTemplateNode[]> newChildren = new ArrayList<>();
             for (COBJECT cobject : cattribute.getChildrenArray()) {
 
                 if (cobject instanceof CPRIMITIVEOBJECT cprimitiveobject) {
                     inputMap.put(cattribute.getRmAttributeName(), inputHandler.extractInput(cprimitiveobject));
                 } else {
-                    List<WebTemplateNode> childNode =
+                    WebTemplateNode[] childNode =
                             parseCOBJECT(cobject, pathLoop, termDefinitionMap, cattribute.getRmAttributeName());
 
                     if (cobject instanceof ARCHETYPESLOT) {
-                        childNode.forEach(c -> c.setArchetypeSlot(true));
+                        for (WebTemplateNode c : childNode) {
+                            c.setArchetypeSlot(true);
+                        }
                     }
-                    newChildren.addAll(childNode);
+                    newChildren.add(childNode);
                 }
 
                 if (cattribute instanceof CSINGLEATTRIBUTE
@@ -458,111 +460,40 @@ public class OPTParser {
                     cardinality.setMax(cattribute.getExistence().getUpper());
                     cardinality.setExcludeFromWebTemplate(Boolean.TRUE);
 
-                    newChildren.forEach(c -> cardinality.getIds().add(c.getId()));
+                    newChildren.forEach(cs -> {
+                        for (WebTemplateNode c : cs) {
+                            cardinality.getIds().add(c.getId());
+                        }
+                    });
 
                     node.getCardinalities().add(cardinality);
                 }
             }
 
-            List<WebTemplateNode> ismTransitionList = newChildren.stream()
-                    .filter(n -> RmConstants.ISM_TRANSITION.equals(n.getRmType()))
-                    .toList();
-            if (!ismTransitionList.isEmpty()) {
-                WebTemplateNode firstChild = ismTransitionList.get(0);
-                WebTemplateNode ismTransition = new WebTemplateNode();
-                ismTransition.setName(cattribute.getRmAttributeName());
-                ismTransition.setId(buildId(cattribute.getRmAttributeName()));
-                ismTransition.setMin(firstChild.getMin());
-                ismTransition.setMax(firstChild.getMax());
-                ismTransition.setRmType(RmConstants.ISM_TRANSITION);
-                ismTransition.setInContext(true);
-                ismTransition.setAqlPath(aqlPath.addEnd(cattribute.getRmAttributeName()));
+            handleActionIsmTransitions(aqlPath, node, cattribute, newChildren);
 
-                WebTemplateNode careflowStep = new WebTemplateNode();
-                WebTemplateNode careflowStepProto = firstChild
-                        .findChildById(CAREFLOW_STEP)
-                        .orElseThrow(() -> new SdkException(String.format("Missing node: %s", CAREFLOW_STEP)));
-                careflowStep.setMin(careflowStepProto.getMin());
-                careflowStep.setMax(careflowStepProto.getMin());
-                careflowStep.setName("Careflow_step");
-                careflowStep.setId(CAREFLOW_STEP);
-                careflowStep.setRmType(RmConstants.DV_CODED_TEXT);
-                careflowStep.setInContext(true);
-                careflowStep.setAqlPath(aqlPath.addEnd(cattribute.getRmAttributeName(), CAREFLOW_STEP));
-                WebTemplateInput code = new WebTemplateInput();
-                code.setSuffix("code");
-                code.setType(CODED_TEXT);
-                code.setTerminology("local");
-
-                ismTransitionList.forEach(i -> {
-                    WebTemplateInputValue value = i.findChildById(CAREFLOW_STEP)
-                            .get()
-                            .getInputs()
-                            .get(0)
-                            .getList()
-                            .get(0);
-                    value.getCurrentStates()
-                            .addAll(i.findChildById(CURRENT_STATE).get().getInputs().get(0).getList().stream()
-                                    .map(WebTemplateInputValue::getValue)
-                                    .collect(Collectors.toList()));
-                    code.getList().add(value);
-                });
-                careflowStep.getInputs().add(code);
-                ismTransition.getChildren().add(careflowStep);
-
-                WebTemplateNode currentState = new WebTemplateNode();
-                WebTemplateNode currentStateProto =
-                        firstChild.findChildById(CURRENT_STATE).orElseThrow();
-                currentState.setMin(currentStateProto.getMin());
-                currentState.setMax(currentStateProto.getMin());
-                currentState.setRmType(RmConstants.DV_CODED_TEXT);
-                currentState.setName("Current_state");
-                currentState.setId(CURRENT_STATE);
-                currentState.setInContext(true);
-                currentState.setAqlPath(aqlPath.addEnd(cattribute.getRmAttributeName(), CURRENT_STATE));
-                WebTemplateInput code2 = new WebTemplateInput();
-                code2.setSuffix("code");
-                code2.setType(CODED_TEXT);
-                code2.setTerminology(OPENEHR);
-                code2.getList()
-                        .addAll(ismTransitionList.stream()
-                                .flatMap(n -> n.findChildById(CURRENT_STATE).stream())
-                                .map(WebTemplateNode::getInputs)
-                                .flatMap(List::stream)
-                                .map(WebTemplateInput::getList)
-                                .flatMap(List::stream)
-                                .collect(Collectors.toList()));
-                currentState.getInputs().add(code2);
-                ismTransition.getChildren().add(currentState);
-                WebTemplateNode transition =
-                        firstChild.findChildById("transition").orElseThrow();
-                transition.setAqlPath(aqlPath.addEnd(cattribute.getRmAttributeName(), "transition"));
-                transition.setInContext(true);
-                ismTransition.getChildren().add(transition);
-                node.getChildren().add(ismTransition);
-            }
-
-            if (cattribute instanceof CMULTIPLEATTRIBUTE) {
-
-                WebtemplateCardinality webtemplateCardinality = Optional.ofNullable(
-                                ((CMULTIPLEATTRIBUTE) cattribute).getCardinality())
-                        .map(this::buildCardinality)
-                        .orElse(null);
-                if (webtemplateCardinality != null) {
-                    cardinaltyList.add(Pair.of(
-                            webtemplateCardinality,
-                            newChildren.stream()
-                                    .map(WebTemplateNode::getAqlPathDto)
-                                    .collect(Collectors.toList())));
-                }
-            }
+            Optional.of(cattribute)
+                    .filter(CMULTIPLEATTRIBUTE.class::isInstance)
+                    .map(CMULTIPLEATTRIBUTE.class::cast)
+                    .map(CMULTIPLEATTRIBUTE::getCardinality)
+                    .map(this::buildCardinality)
+                    .map(webtemplateCardinality -> {
+                        List<AqlPath> paths = newChildren.stream()
+                                .flatMap(Arrays::stream)
+                                .map(WebTemplateNode::getAqlPathDto)
+                                .collect(Collectors.toList());
+                        return Pair.of(webtemplateCardinality, paths);
+                    })
+                    .ifPresent(cardinaltyList::add);
 
             // Add missing names to aqlPath if needed
             newChildren.stream()
+                    .flatMap(Arrays::stream)
                     // node does not already have name in aql
                     .filter(c -> !node.isRelativePathNameDependent(c))
                     // there  exist a node which matches the aql without name but not with name
                     .filter(c -> newChildren.stream()
+                            .flatMap(Arrays::stream)
                             .filter(n -> !n.getAqlPathDto().equals(c.getAqlPathDto()))
                             .anyMatch(n -> n.getAqlPathDto().equals(c.getAqlPathDto(), false)))
                     .forEach(c -> {
@@ -572,7 +503,7 @@ public class OPTParser {
                         c.setAqlPath(path);
                     });
 
-            node.getChildren().addAll(newChildren);
+            newChildren.forEach(cs -> node.getChildren().addAll(Arrays.asList(cs)));
         }
 
         // Handle choice children
@@ -622,21 +553,22 @@ public class OPTParser {
 
         // Push inputs for DV_CODED_TEXT up
         if (node.getRmType().equals(RmConstants.DV_CODED_TEXT)) {
-            List<WebTemplateNode> matching =
-                    node.findMatching(n -> n.getRmType().equals(RmConstants.CODE_PHRASE));
-            if (!matching.isEmpty()) {
-                node.getInputs().addAll(matching.get(0).getInputs());
-
+            Optional<WebTemplateNode> matching = node.streamMatching(
+                            n -> n.getRmType().equals(RmConstants.CODE_PHRASE))
+                    .findFirst();
+            List<WebTemplateInput> inputs = node.getInputs();
+            if (matching.isEmpty()) {
+                inputs.add(InputHandler.buildWebTemplateInput("value", "TEXT"));
+                inputs.add(InputHandler.buildWebTemplateInput("code", "TEXT"));
             } else {
-                node.getInputs().add(InputHandler.buildWebTemplateInput("value", "TEXT"));
-                node.getInputs().add(InputHandler.buildWebTemplateInput("code", "TEXT"));
+                inputs.addAll(matching.get().getInputs());
             }
         }
 
         nameNode.ifPresent(node.getChildren()::add);
         addRMAttributes(node, aqlPath, termDefinitionMap);
 
-        // If inputs where not set from the template set them via rmType;
+        // If inputs where not set from the template set them via rmType
         if (node.getInputs().isEmpty()) {
             inputHandler.addInputs(node, inputMap);
         }
@@ -644,22 +576,128 @@ public class OPTParser {
         makeIdUnique(node);
 
         cardinaltyList.forEach(p -> {
-            List<String> nodeIds = p.getValue().stream()
-                    .map(s -> node.findMatching(n -> n.getAqlPathDto().equals(s)))
-                    .flatMap(List::stream)
-                    .map(WebTemplateNode::getId)
-                    .toList();
-            // only add non-trivial cardinalities.
-            if ((p.getKey().getMax() != null
-                            && p.getKey().getMax() != -1
-                            && p.getKey().getMax() < nodeIds.size())
-                    || (p.getKey().getMin() != null && p.getKey().getMin() > 1)) {
-                p.getKey().getIds().addAll(nodeIds);
-                node.getCardinalities().add(p.getKey());
+            WebtemplateCardinality key = p.getKey();
+            boolean nonTrivialMin = (key.getMin() != null && key.getMin() > 1);
+            int max = key.getMax() == null ? -1 : key.getMax();
+
+            if (nonTrivialMin || max != -1) {
+                String[] nodeIds = p.getValue().stream()
+                        .flatMap(s -> node.streamMatching(n -> n.getAqlPathDto().equals(s)))
+                        .map(WebTemplateNode::getId)
+                        .toArray(String[]::new);
+                // only add non-trivial cardinalities
+                if (nonTrivialMin || max < nodeIds.length) {
+                    key.getIds().addAll(Arrays.asList(nodeIds));
+                    node.getCardinalities().add(key);
+                }
             }
         });
 
         node.getChildren().forEach(child -> addInContext(node, child));
+    }
+
+    private static void handleActionIsmTransitions(
+            AqlPath aqlPath, WebTemplateNode node, CATTRIBUTE cattribute, List<WebTemplateNode[]> newChildren) {
+        if (!RmConstants.ACTION.equals(node.getRmType())) {
+            return;
+        }
+
+        WebTemplateNode[] ismTransitionNodes = newChildren.stream()
+                .flatMap(Arrays::stream)
+                .filter(n -> RmConstants.ISM_TRANSITION.equals(n.getRmType()))
+                .toArray(WebTemplateNode[]::new);
+
+        if (ismTransitionNodes.length == 0) {
+            return;
+        }
+
+        WebTemplateNode firstChild = ismTransitionNodes[0];
+        String rmAttributeName = cattribute.getRmAttributeName();
+
+        WebTemplateNode ismTransition = new WebTemplateNode();
+        {
+            ismTransition.setName(rmAttributeName);
+            ismTransition.setId(buildId(rmAttributeName));
+            ismTransition.setMin(firstChild.getMin());
+            ismTransition.setMax(firstChild.getMax());
+            ismTransition.setRmType(RmConstants.ISM_TRANSITION);
+            ismTransition.setInContext(true);
+            ismTransition.setAqlPath(aqlPath.addEnd(rmAttributeName));
+        }
+
+        WebTemplateNode careflowStep = new WebTemplateNode();
+        {
+            WebTemplateNode careflowStepProto = firstChild
+                    .findChildById(CAREFLOW_STEP)
+                    .orElseThrow(() -> new SdkException(String.format("Missing node: %s", CAREFLOW_STEP)));
+            careflowStep.setMin(careflowStepProto.getMin());
+            careflowStep.setMax(careflowStepProto.getMin());
+            careflowStep.setName("Careflow_step");
+            careflowStep.setId(CAREFLOW_STEP);
+            careflowStep.setRmType(RmConstants.DV_CODED_TEXT);
+            careflowStep.setInContext(true);
+            careflowStep.setAqlPath(aqlPath.addEnd(rmAttributeName, CAREFLOW_STEP));
+        }
+
+        WebTemplateInput code = new WebTemplateInput();
+        {
+            code.setSuffix("code");
+            code.setType(CODED_TEXT);
+            code.setTerminology("local");
+        }
+
+        for (WebTemplateNode itNode : ismTransitionNodes) {
+            // expectation: only one careflow step
+            WebTemplateInputValue value = itNode.findChildById(CAREFLOW_STEP)
+                    .orElseThrow()
+                    .getInputs()
+                    .get(0)
+                    .getList()
+                    .get(0);
+
+            // add current states of ism transition to careflow step
+            value.getCurrentStates()
+                    .addAll(itNode.findChildById(CURRENT_STATE).orElseThrow().getInputs().get(0).getList().stream()
+                            .map(WebTemplateInputValue::getValue)
+                            .toList());
+
+            code.getList().add(value);
+        }
+        careflowStep.getInputs().add(code);
+
+        ismTransition.getChildren().add(careflowStep);
+
+        WebTemplateNode currentState = new WebTemplateNode();
+        WebTemplateNode currentStateProto =
+                firstChild.findChildById(CURRENT_STATE).orElseThrow();
+        currentState.setMin(currentStateProto.getMin());
+        currentState.setMax(currentStateProto.getMin());
+        currentState.setRmType(RmConstants.DV_CODED_TEXT);
+        currentState.setName("Current_state");
+        currentState.setId(CURRENT_STATE);
+        currentState.setInContext(true);
+        currentState.setAqlPath(aqlPath.addEnd(rmAttributeName, CURRENT_STATE));
+        WebTemplateInput code2 = new WebTemplateInput();
+        code2.setSuffix("code");
+        code2.setType(CODED_TEXT);
+        code2.setTerminology(OPENEHR);
+
+        Arrays.stream(ismTransitionNodes)
+                .flatMap(n -> n.findChildById(CURRENT_STATE).stream())
+                .map(WebTemplateNode::getInputs)
+                .flatMap(List::stream)
+                .map(WebTemplateInput::getList)
+                .flatMap(List::stream)
+                .forEach(code2.getList()::add);
+
+        currentState.getInputs().add(code2);
+        ismTransition.getChildren().add(currentState);
+        WebTemplateNode transition = firstChild.findChildById("transition").orElseThrow();
+        transition.setAqlPath(aqlPath.addEnd(rmAttributeName, "transition"));
+        transition.setInContext(true);
+        ismTransition.getChildren().add(transition);
+
+        node.getChildren().add(ismTransition);
     }
 
     private void replaceParentAql(WebTemplateNode node, AqlPath oldBase, AqlPath newBase) {
@@ -681,7 +719,7 @@ public class OPTParser {
                 .filter(c -> c.getRmAttributeName().equals("name"))
                 .filter(c -> c.getChildrenArray().length == 1)
                 .map(c -> parseCOBJECT(c.getChildrenArray(0), aqlPath, termDefinitionMap, c.getRmAttributeName()))
-                .flatMap(List::stream)
+                .flatMap(Arrays::stream)
                 .findAny();
     }
 
@@ -713,7 +751,7 @@ public class OPTParser {
                 Instruction.class,
                 List.of("narrative"),
                 IsmTransition.class,
-                List.of("current_state", "careflow_step", "transition"),
+                List.of(CURRENT_STATE, CAREFLOW_STEP, "transition"),
                 History.class,
                 List.of("origin"),
                 Event.class,
@@ -768,21 +806,19 @@ public class OPTParser {
     public static void makeIdUnique(WebTemplateNode node) {
         // Make ids unique in for a children
         node.getChildren().stream()
-                .collect(Collectors.groupingBy(node1 -> node1.getId(false)))
+                .collect(Collectors.groupingBy(n -> n.getId(false)))
                 .values()
                 .forEach(l -> {
                     if (l.size() > 1) {
-                        for (int i = 0; i < l.size(); i++) {
-                            if (i > 0) {
-                                WebTemplateNode n = l.get(i);
-                                int optionalIdNumber = i + 1;
-                                n.setOptionalIdNumber(optionalIdNumber);
+                        for (int i = 1; i < l.size(); i++) {
+                            WebTemplateNode n = l.get(i);
+                            int optionalIdNumber = i + 1;
+                            n.setOptionalIdNumber(optionalIdNumber);
 
-                                if (RmConstants.ELEMENT.equals(n.getRmType())) {
-                                    n.getChildren().stream()
-                                            .filter(c -> c.getId().equals(n.getId(false)))
-                                            .forEach(c -> c.setOptionalIdNumber(optionalIdNumber));
-                                }
+                            if (RmConstants.ELEMENT.equals(n.getRmType())) {
+                                n.getChildren().stream()
+                                        .filter(c -> c.getId().equals(n.getId(false)))
+                                        .forEach(c -> c.setOptionalIdNumber(optionalIdNumber));
                             }
                         }
                     } else {
@@ -801,39 +837,52 @@ public class OPTParser {
         Class<?> javaClass = typeInfo.getJavaClass();
         if (Pathable.class.isAssignableFrom(javaClass) || DvInterval.class.isAssignableFrom(javaClass)) {
 
-            node.getChildren()
-                    .addAll(typeInfo.getAttributes().values().stream()
-                            .filter(s -> !s.isComputed())
-                            // EVENT.offset is not marked computed in archie
-                            .filter(s -> !(Event.class.isAssignableFrom(javaClass) && "offset".equals(s.getRmName())))
-                            .filter(s -> !(Element.class.isAssignableFrom(javaClass)
-                                    && !List.of("name", "feeder_audit", "null_flavour")
-                                            .contains(s.getRmName())))
-                            .filter(s -> !"value".equals(s.getRmName()))
-                            .filter(s -> !Locatable.class.isAssignableFrom(s.getTypeInCollection()))
-                            .filter(s ->
-                                    !(DvInterval.class.isAssignableFrom(javaClass) && "interval".equals(s.getRmName())))
-                            .map(i -> buildNodeForAttribute(i, aqlPath, termDefinitionMap))
-                            // only add if not already there
-                            .filter(n -> node.getChildren().stream()
-                                    .map(WebTemplateNode::getId)
-                                    .noneMatch(s -> s.equals(n.getId())))
-                            .toList());
+            List<WebTemplateNode> children = node.getChildren();
+            typeInfo.getAttributes().values().stream()
+                    .filter(s -> {
+                        String rmName = s.getRmName();
+                        return !(s.isComputed()
+                                || "value".equals(rmName)
+                                // EVENT.offset is not marked computed in archie
+                                || (Event.class.isAssignableFrom(javaClass) && "offset".equals(rmName))
+                                || (Element.class.isAssignableFrom(javaClass)
+                                        && switch (rmName) {
+                                            case "name", "feeder_audit", "null_flavour" -> false;
+                                            default -> true;
+                                        })
+                                || Locatable.class.isAssignableFrom(s.getTypeInCollection())
+                                || (DvInterval.class.isAssignableFrom(javaClass) && "interval".equals(rmName)));
+                    })
+                    .map(i -> {
+                        String rmName = i.getRmName();
+                        String id = buildId(rmName);
+                        // only add if not already there
+                        for (WebTemplateNode child : children) {
+                            if (child.getId().equals(id)) {
+                                return null;
+                            }
+                        }
+                        return buildNodeForAttribute(i, aqlPath, rmName, id, termDefinitionMap);
+                    })
+                    .filter(Objects::nonNull)
+                    .forEach(children::add);
         }
     }
 
     private WebTemplateNode buildNodeForAttribute(
             RMAttributeInfo attributeInfo,
             AqlPath aqlPath,
+            String rmName,
+            String id,
             Map<String, Map<String, TermDefinition>> termDefinitionMap) {
         WebTemplateNode node = new WebTemplateNode();
-        node.setAqlPath(aqlPath.addEnd(attributeInfo.getRmName()));
-        node.setName(attributeInfo.getRmName());
-        node.setId(buildId(attributeInfo.getRmName()));
+        node.setAqlPath(aqlPath.addEnd(rmName));
+        node.setName(rmName);
+        node.setId(id);
         node.setRmType(attributeInfo.getTypeNameInCollection());
         node.setMax(attributeInfo.isMultipleValued() ? -1 : 1);
         node.setMin(attributeInfo.isNullable() ? 0 : 1);
-        if (List.of("action_archetype_id", "math_function").contains(attributeInfo.getRmName())) {
+        if ("action_archetype_id".equals(rmName) || "math_function".equals(rmName)) {
             node.setMin(1);
         }
 
@@ -843,52 +892,52 @@ public class OPTParser {
         return node;
     }
 
-    private List<WebTemplateNode> parseCOBJECT(
+    private WebTemplateNode[] parseCOBJECT(
             COBJECT cobject,
             AqlPath aqlPath,
             Map<String, Map<String, TermDefinition>> termDefinitionMap,
             String rmAttributeName) {
 
-        if (cobject instanceof CARCHETYPEROOT) {
-            String nodeId = ((CARCHETYPEROOT) cobject).getArchetypeId().getValue();
+        if (cobject instanceof CARCHETYPEROOT carchetyperoot) {
+            String nodeId = carchetyperoot.getArchetypeId().getValue();
             final AqlPath pathLoop;
             if (StringUtils.isNotBlank(nodeId)) {
                 pathLoop = aqlPath.replaceLastNode(n -> n.withAtCode(nodeId));
             } else {
                 pathLoop = aqlPath;
             }
-            return parseCARCHETYPEROOT((CARCHETYPEROOT) cobject, pathLoop);
+            return parseCARCHETYPEROOT(carchetyperoot, pathLoop);
 
-        } else if (cobject instanceof CCOMPLEXOBJECT) {
-            String nodeId = isLocatableNode(cobject) ? cobject.getNodeId() : null;
+        } else if (cobject instanceof CCOMPLEXOBJECT ccomplexobject) {
+            String nodeId = isLocatableNode(ccomplexobject) ? ccomplexobject.getNodeId() : null;
             final AqlPath pathLoop;
             if (StringUtils.isNotBlank(nodeId)) {
                 pathLoop = aqlPath.replaceLastNode(n -> n.withAtCode(nodeId));
             } else {
                 pathLoop = aqlPath;
             }
-            return parseCCOMPLEXOBJECT((CCOMPLEXOBJECT) cobject, pathLoop, termDefinitionMap, rmAttributeName);
+            return parseCCOMPLEXOBJECT(ccomplexobject, pathLoop, termDefinitionMap, rmAttributeName);
 
-        } else if (cobject instanceof CDOMAINTYPE) {
-            String nodeId = isLocatableNode(cobject) ? cobject.getNodeId() : null;
+        } else if (cobject instanceof CDOMAINTYPE cdomaintype) {
+            String nodeId = isLocatableNode(cdomaintype) ? cdomaintype.getNodeId() : null;
             final AqlPath pathLoop;
             if (StringUtils.isNotBlank(nodeId)) {
                 pathLoop = aqlPath.replaceLastNode(n -> n.withAtCode(nodeId));
             } else {
                 pathLoop = aqlPath;
             }
-            return Collections.singletonList(
-                    parseCDOMAINTYPE((CDOMAINTYPE) cobject, pathLoop, termDefinitionMap, rmAttributeName));
-        } else if (cobject instanceof ARCHETYPESLOT) {
-            String nodeId = cobject.getNodeId();
+            return new WebTemplateNode[] {parseCDOMAINTYPE(cdomaintype, pathLoop, termDefinitionMap, rmAttributeName)};
+        } else if (cobject instanceof ARCHETYPESLOT archetypeslot) {
+            String nodeId = archetypeslot.getNodeId();
             final AqlPath pathLoop;
             if (StringUtils.isNotBlank(nodeId)) {
                 pathLoop = aqlPath.replaceLastNode(n -> n.withAtCode(nodeId));
             } else {
                 pathLoop = aqlPath;
             }
-            return Collections.singletonList(
-                    parseARCHETYPESLOT((ARCHETYPESLOT) cobject, pathLoop, termDefinitionMap, rmAttributeName));
+            return new WebTemplateNode[] {
+                parseARCHETYPESLOT(archetypeslot, pathLoop, termDefinitionMap, rmAttributeName)
+            };
         }
 
         // this validation must be removed after xsd will be updated and DV_SCALE will be implemented
@@ -897,7 +946,7 @@ public class OPTParser {
                     MessageFormat.format("The supplied template is not supported: Unsupported type {0}.", "DV_SCALE"));
         }
 
-        return List.of();
+        return new WebTemplateNode[] {};
     }
 
     /**
@@ -927,199 +976,263 @@ public class OPTParser {
 
         WebTemplateNode node = buildNode(cdomaintype, rmAttributeName, termDefinitionMap, null);
         node.setAqlPath(aqlPath);
-        if (cdomaintype instanceof CDVSTATE) {
+
+        if (cdomaintype instanceof CDVQUANTITY cdvquantity) {
+            parseCDVQUANTITY(termDefinitionMap, cdvquantity, node);
+        } else if (cdomaintype instanceof CDVORDINAL cdvordinal) {
+            parseCDVORDINAL(termDefinitionMap, cdvordinal, node);
+        } else if (cdomaintype instanceof CCODEPHRASE ccodephrase) {
+            parseCCODEPHRASE(aqlPath, termDefinitionMap, rmAttributeName, ccodephrase, node);
+        } else /* if (cdomaintype instanceof CDVSTATE) */ {
             throw new SdkException(
-                    String.format("Unexpected class: %s", cdomaintype.getClass().getSimpleName()));
-        } else if (cdomaintype instanceof CDVQUANTITY) {
+                    "Unexpected class: %s".formatted(cdomaintype.getClass().getSimpleName()));
+        }
+        return node;
+    }
 
-            WebTemplateInput magnitude = new WebTemplateInput();
-            magnitude.setSuffix("magnitude");
-            magnitude.setType("DECIMAL");
-            Optional.of((CDVQUANTITY) cdomaintype)
-                    .map(CDVQUANTITY::getAssumedValue)
-                    .map(DVQUANTITY::getMagnitude)
-                    .map(d -> Double.toString(d))
-                    .ifPresent(magnitude::setDefaultValue);
-            inputHandler.findDefaultValue(node, "magnitude").ifPresent(magnitude::setDefaultValue);
-            node.getInputs().add(magnitude);
+    private void parseCDVQUANTITY(
+            Map<String, Map<String, TermDefinition>> termDefinitionMap, CDVQUANTITY cdvquantity, WebTemplateNode node) {
+        WebTemplateInput magnitude = new WebTemplateInput();
+        magnitude.setSuffix("magnitude");
+        magnitude.setType("DECIMAL");
+        Optional.of(cdvquantity)
+                .map(CDVQUANTITY::getAssumedValue)
+                .map(DVQUANTITY::getMagnitude)
+                .map(d -> Double.toString(d))
+                .ifPresent(magnitude::setDefaultValue);
+        inputHandler.findDefaultValue(node, "magnitude").ifPresent(magnitude::setDefaultValue);
+        node.getInputs().add(magnitude);
 
-            WebTemplateInput unit = new WebTemplateInput();
-            unit.setSuffix("unit");
-            unit.setType(CODED_TEXT);
-            Optional.of((CDVQUANTITY) cdomaintype)
-                    .map(CDVQUANTITY::getAssumedValue)
-                    .map(DVQUANTITY::getUnits)
-                    .ifPresent(unit::setDefaultValue);
-            inputHandler.findDefaultValue(node, "units").ifPresent(unit::setDefaultValue);
-            node.getInputs().add(unit);
+        WebTemplateInput unit = new WebTemplateInput();
+        unit.setSuffix("unit");
+        unit.setType(CODED_TEXT);
+        Optional.of(cdvquantity)
+                .map(CDVQUANTITY::getAssumedValue)
+                .map(DVQUANTITY::getUnits)
+                .ifPresent(unit::setDefaultValue);
+        inputHandler.findDefaultValue(node, "units").ifPresent(unit::setDefaultValue);
+        node.getInputs().add(unit);
 
-            Arrays.stream(((CDVQUANTITY) cdomaintype).getListArray()).forEach(o -> {
-                WebTemplateInputValue value = new WebTemplateInputValue();
-                value.setLabel(o.getUnits());
-                value.setValue(o.getUnits());
+        Arrays.stream(cdvquantity.getListArray()).forEach(o -> {
+            WebTemplateInputValue value = new WebTemplateInputValue();
+            value.setLabel(o.getUnits());
+            value.setValue(o.getUnits());
 
-                WebTemplateValidation validation = new WebTemplateValidation();
-                boolean addValidation = false;
-                if (o.getMagnitude() != null) {
-                    addValidation = true;
-                    validation.setRange(inputHandler.extractInterval(o.getMagnitude()));
-                }
-                if (o.getPrecision() != null) {
-                    addValidation = true;
-                    validation.setPrecision(inputHandler.extractInterval(o.getPrecision()));
-                }
-                if (addValidation) {
-                    value.setValidation(validation);
-                }
-                value.getLocalizedLabels()
-                        .putAll(termDefinitionMap.getOrDefault(o.getUnits(), Collections.emptyMap()).entrySet().stream()
-                                .collect(Collectors.toMap(
-                                        Map.Entry::getKey, e -> e.getValue().getValue())));
-                unit.getList().add(value);
-            });
-            if (unit.getList().size() == 1) {
-                magnitude.setValidation(unit.getList().get(0).getValidation());
+            WebTemplateValidation validation = new WebTemplateValidation();
+            boolean addValidation = false;
+            if (o.getMagnitude() != null) {
+                addValidation = true;
+                validation.setRange(inputHandler.extractInterval(o.getMagnitude()));
             }
-        } else if (cdomaintype instanceof CDVORDINAL) {
-            WebTemplateInput code = new WebTemplateInput();
-            inputHandler.findDefaultValue(node, "defining_code").ifPresent(code::setDefaultValue);
-            code.setType(CODED_TEXT);
-            node.getInputs().add(code);
-            Optional.of((CDVORDINAL) cdomaintype)
-                    .map(CDVORDINAL::getAssumedValue)
-                    .map(DVORDINAL::getSymbol)
-                    .map(DVCODEDTEXT::getDefiningCode)
-                    .map(CODEPHRASE::getCodeString)
-                    .ifPresent(code::setDefaultValue);
-            Arrays.stream(((CDVORDINAL) cdomaintype).getListArray()).forEach(o -> {
+            if (o.getPrecision() != null) {
+                addValidation = true;
+                validation.setPrecision(inputHandler.extractInterval(o.getPrecision()));
+            }
+            if (addValidation) {
+                value.setValidation(validation);
+            }
+            value.getLocalizedLabels()
+                    .putAll(termDefinitionMap.getOrDefault(o.getUnits(), Collections.emptyMap()).entrySet().stream()
+                            .collect(Collectors.toMap(
+                                    Map.Entry::getKey, e -> e.getValue().getValue())));
+            unit.getList().add(value);
+        });
+        if (unit.getList().size() == 1) {
+            magnitude.setValidation(unit.getList().get(0).getValidation());
+        }
+    }
+
+    private void parseCDVORDINAL(
+            Map<String, Map<String, TermDefinition>> termDefinitionMap, CDVORDINAL cdvordinal, WebTemplateNode node) {
+        WebTemplateInput code = new WebTemplateInput();
+        inputHandler.findDefaultValue(node, "defining_code").ifPresent(code::setDefaultValue);
+        code.setType(CODED_TEXT);
+        Optional<CODEPHRASE> codephrase = Optional.of(cdvordinal)
+                .map(CDVORDINAL::getAssumedValue)
+                .map(DVORDINAL::getSymbol)
+                .map(DVCODEDTEXT::getDefiningCode);
+        codephrase
+                .map(CODEPHRASE::getTerminologyId)
+                .map(TERMINOLOGYID::getValue)
+                .ifPresent(code::setTerminology);
+        codephrase.map(CODEPHRASE::getCodeString).ifPresent(code::setDefaultValue);
+        node.getInputs().add(code);
+        Arrays.stream(cdvordinal.getListArray())
+                .map(o -> {
+                    WebTemplateInputValue value = new WebTemplateInputValue();
+                    value.setOrdinal(o.getValue());
+                    value.setValue(o.getSymbol().getDefiningCode().getCodeString());
+                    value.getLocalizedLabels()
+                            .putAll(
+                                    Optional.ofNullable(termDefinitionMap.get(value.getValue()))
+                                            .map(Map::entrySet)
+                                            .stream()
+                                            .flatMap(Set::stream)
+                                            .collect(Collectors.toMap(
+                                                    Map.Entry::getKey,
+                                                    e -> e.getValue().getValue())));
+                    value.getLocalizedDescriptions()
+                            .putAll(
+                                    Optional.ofNullable(termDefinitionMap.get(value.getValue()))
+                                            .map(Map::entrySet)
+                                            .stream()
+                                            .flatMap(Set::stream)
+                                            .collect(Collectors.toMap(
+                                                    Map.Entry::getKey,
+                                                    e -> e.getValue().getDescription())));
+                    value.setLabel(value.getLocalizedLabels().get(defaultLanguage));
+                    value.getLocalizedDescriptions().putIfAbsent(defaultLanguage, "");
+                    return value;
+                })
+                .forEach(code.getList()::add);
+    }
+
+    private void parseCCODEPHRASE(
+            AqlPath aqlPath,
+            Map<String, Map<String, TermDefinition>> termDefinitionMap,
+            String rmAttributeName,
+            CCODEPHRASE ccodephrase,
+            WebTemplateNode node) {
+        WebTemplateInput code = new WebTemplateInput();
+        inputHandler.findDefaultValue(node, "defining_code").ifPresent(code::setDefaultValue);
+        code.setSuffix("code");
+        node.getInputs().add(code);
+        Optional.of(ccodephrase)
+                .map(CCODEPHRASE::getAssumedValue)
+                .map(CODEPHRASE::getCodeString)
+                .ifPresent(code::setDefaultValue);
+
+        Optional<String> terminology;
+        if (ccodephrase instanceof CCODEREFERENCE ccodereference) {
+            terminology = Optional.of(ccodereference)
+                    .map(CCODEREFERENCE::getReferenceSetUri)
+                    .map(OPTParser::removeSchema);
+        } else {
+            terminology =
+                    Optional.of(ccodephrase).map(CCODEPHRASE::getTerminologyId).map(OBJECTID::getValue);
+        }
+        terminology.ifPresent(code::setTerminology);
+
+        if (code.getTerminology().equals(OPENEHR)) {
+            // TODO CDR-2273 cleanup: determine terminologyAttribute + provide AttributeCodesets
+            // to findOpenEhrValueSet (etc)
+            // Resolve the terminology group for rubric lookups with the group.
+
+            AttributeCodesets.TerminologyContainer rmConstrainedTerminologyContainer = Optional.of(rmAttributeName)
+                    .map(AttributeCodesets::get)
+                    .orElseGet(() -> {
+                        if (aqlPath.getNodeCount() < 2) {
+                            return null;
+                        }
+                        // CDR-2273 Sometimes the parent attribute is relevant (e.g. for DV_CODED_TEXT.defining_code),
+                        // unlike DV_MULTIMEDIA.media_type: take its attribute
+                        // TODO CDR-2273 we need to make sure the whole RM model is covered in AttributeCodesets without
+                        // conflicts.
+                        String terminologyAttribute =
+                                aqlPath.getNode(aqlPath.getNodeCount() - 2).getName();
+                        return AttributeCodesets.get(terminologyAttribute);
+                    });
+
+            ValueSet defaultValueset = TerminologyProvider.findOpenEhrValueSet(
+                    code.getTerminology(),
+                    ccodephrase.getCodeListArray(),
+                    defaultLanguage,
+                    rmConstrainedTerminologyContainer);
+
+            Map<String, ValueSet> valuesetByLanguage = languages.stream()
+                    .collect(Collectors.toMap(
+                            Function.identity(),
+                            l -> TerminologyProvider.findOpenEhrValueSet(
+                                    code.getTerminology(),
+                                    ccodephrase.getCodeListArray(),
+                                    l,
+                                    rmConstrainedTerminologyContainer)));
+
+            defaultValueset.getTerms().forEach(t -> {
                 WebTemplateInputValue value = new WebTemplateInputValue();
-                value.setOrdinal(o.getValue());
-                value.setValue(o.getSymbol().getDefiningCode().getCodeString());
+                value.setValue(t.getCode());
+                value.setLabel(t.getValue());
                 value.getLocalizedLabels()
-                        .putAll(Optional.ofNullable(termDefinitionMap.get(value.getValue())).map(Map::entrySet).stream()
-                                .flatMap(Set::stream)
+                        .putAll(valuesetByLanguage.entrySet().stream()
                                 .collect(Collectors.toMap(
-                                        Map.Entry::getKey, e -> e.getValue().getValue())));
-                value.getLocalizedDescriptions()
-                        .putAll(Optional.ofNullable(termDefinitionMap.get(value.getValue())).map(Map::entrySet).stream()
-                                .flatMap(Set::stream)
-                                .collect(Collectors.toMap(
-                                        Map.Entry::getKey, e -> e.getValue().getDescription())));
-                value.setLabel(value.getLocalizedLabels().get(defaultLanguage));
-                if (!value.getLocalizedDescriptions().containsKey(defaultLanguage)) {
-                    value.getLocalizedDescriptions().put(defaultLanguage, "");
-                }
+                                        Map.Entry::getKey,
+                                        e -> e.getValue().getTerms().stream()
+                                                .filter(x -> x.getCode().equals(t.getCode()))
+                                                .findAny()
+                                                .map(TermDefinition::getValue)
+                                                .orElse(""))));
                 code.getList().add(value);
             });
 
-        } else if (cdomaintype instanceof CCODEPHRASE) {
-            WebTemplateInput code = new WebTemplateInput();
-            inputHandler.findDefaultValue(node, "defining_code").ifPresent(code::setDefaultValue);
-            code.setSuffix("code");
-            node.getInputs().add(code);
-            Optional.of((CCODEPHRASE) cdomaintype)
-                    .map(CCODEPHRASE::getAssumedValue)
-                    .map(CODEPHRASE::getCodeString)
-                    .ifPresent(code::setDefaultValue);
-
-            if (cdomaintype instanceof CCODEREFERENCE) {
-                code.setTerminology(Optional.of((CCODEREFERENCE) cdomaintype)
-                        .map(CCODEREFERENCE::getReferenceSetUri)
-                        .map(s -> StringUtils.removeStart(s, "terminology:"))
-                        .orElse(null));
-            } else {
-                code.setTerminology(Optional.of((CCODEPHRASE) cdomaintype)
-                        .map(CCODEPHRASE::getTerminologyId)
-                        .map(OBJECTID::getValue)
-                        .orElse(null));
-            }
-
-            if (code.getTerminology().equals(OPENEHR)) {
-                ValueSet valueSet = TerminologyProvider.findOpenEhrValueSet(
-                        code.getTerminology(), ((CCODEPHRASE) cdomaintype).getCodeListArray(), defaultLanguage);
-
-                Map<String, ValueSet> collect = languages.stream()
-                        .collect(Collectors.toMap(
-                                Function.identity(),
-                                l -> TerminologyProvider.findOpenEhrValueSet(
-                                        code.getTerminology(), ((CCODEPHRASE) cdomaintype).getCodeListArray(), l)));
-
-                valueSet.getTherms().forEach(t -> {
-                    WebTemplateInputValue value = new WebTemplateInputValue();
-                    value.setValue(t.getCode());
-                    value.setLabel(t.getValue());
-                    value.getLocalizedLabels()
-                            .putAll(collect.entrySet().stream()
-                                    .collect(Collectors.toMap(Map.Entry::getKey, e -> e.getValue().getTherms().stream()
-                                            .filter(x -> x.getCode().equals(t.getCode()))
-                                            .findAny()
-                                            .map(TermDefinition::getValue)
-                                            .orElse(""))));
-                    code.getList().add(value);
-                });
-
-            } else {
-                Arrays.stream(((CCODEPHRASE) cdomaintype).getCodeListArray())
-                        .map(o -> StringUtils.isBlank(code.getTerminology()) || "local".equals(code.getTerminology())
-                                ? o
-                                : code.getTerminology() + "::" + o)
-                        .forEach(o -> {
-                            WebTemplateInputValue value = new WebTemplateInputValue();
-                            Optional<TermDefinition> termDefinition = Optional.ofNullable(termDefinitionMap.get(o))
-                                    .map(e -> e.get(defaultLanguage));
-                            if (termDefinition.isEmpty()) {
-                                o = o.replace(code.getTerminology() + "::", "");
-                                termDefinition = Optional.ofNullable(termDefinitionMap.get(o))
-                                        .map(e -> e.get(defaultLanguage));
-                            }
-
-                            if (termDefinition.isPresent()) {
-                                value.setValue(termDefinition.get().getCode());
-                                if (StringUtils.isNotBlank((code.getTerminology()))) {
-                                    value.setValue(value.getValue().replace(code.getTerminology() + "::", ""));
-                                }
-                                value.setLabel(termDefinition.get().getValue());
-
-                                value.getLocalizedLabels()
-                                        .putAll(
-                                                termDefinitionMap
-                                                        .getOrDefault(o, Collections.emptyMap())
-                                                        .entrySet()
-                                                        .stream()
-                                                        .collect(Collectors.toMap(Map.Entry::getKey, e -> e.getValue()
-                                                                .getValue())));
-                                value.getLocalizedDescriptions()
-                                        .putAll(
-                                                termDefinitionMap
-                                                        .getOrDefault(o, Collections.emptyMap())
-                                                        .entrySet()
-                                                        .stream()
-                                                        .filter(e -> StringUtils.isNotBlank(
-                                                                e.getValue().getDescription()))
-                                                        .collect(Collectors.toMap(Map.Entry::getKey, e -> e.getValue()
-                                                                .getDescription())));
-                                if (!value.getLocalizedDescriptions().containsKey(defaultLanguage)) {
-                                    value.getLocalizedDescriptions().put(defaultLanguage, "");
-                                }
-                                code.getList().add(value);
-                            }
-                        });
-            }
-
-            if (code.getList().isEmpty()) {
-                code.setType("TEXT");
-                WebTemplateInput value = InputHandler.buildWebTemplateInput("value", "TEXT");
-                value.setTerminology(code.getTerminology());
-                node.getInputs().add(value);
-            } else {
-                code.setType(CODED_TEXT);
-            }
-
         } else {
-            throw new SdkException(
-                    String.format("Unexpected class: %s", cdomaintype.getClass().getSimpleName()));
+            Arrays.stream(ccodephrase.getCodeListArray())
+                    .map(o -> StringUtils.isBlank(code.getTerminology()) || "local".equals(code.getTerminology())
+                            ? o
+                            : code.getTerminology() + "::" + o)
+                    .forEach(o -> {
+                        WebTemplateInputValue value = new WebTemplateInputValue();
+                        Optional<TermDefinition> termDefinition =
+                                Optional.ofNullable(termDefinitionMap.get(o)).map(e -> e.get(defaultLanguage));
+                        if (termDefinition.isEmpty()) {
+                            o = o.replace(code.getTerminology() + "::", "");
+                            termDefinition = Optional.ofNullable(termDefinitionMap.get(o))
+                                    .map(e -> e.get(defaultLanguage));
+                        }
+
+                        if (termDefinition.isPresent()) {
+                            value.setValue(termDefinition.get().getCode());
+                            if (StringUtils.isNotBlank((code.getTerminology()))) {
+                                value.setValue(value.getValue().replace(code.getTerminology() + "::", ""));
+                            }
+                            value.setLabel(termDefinition.get().getValue());
+
+                            value.getLocalizedLabels()
+                                    .putAll(
+                                            termDefinitionMap
+                                                    .getOrDefault(o, Collections.emptyMap())
+                                                    .entrySet()
+                                                    .stream()
+                                                    .collect(Collectors.toMap(
+                                                            Map.Entry::getKey,
+                                                            e -> e.getValue().getValue())));
+                            value.getLocalizedDescriptions()
+                                    .putAll(
+                                            termDefinitionMap
+                                                    .getOrDefault(o, Collections.emptyMap())
+                                                    .entrySet()
+                                                    .stream()
+                                                    .filter(e -> StringUtils.isNotBlank(
+                                                            e.getValue().getDescription()))
+                                                    .collect(Collectors.toMap(
+                                                            Map.Entry::getKey,
+                                                            e -> e.getValue().getDescription())));
+                            if (!value.getLocalizedDescriptions().containsKey(defaultLanguage)) {
+                                value.getLocalizedDescriptions().put(defaultLanguage, "");
+                            }
+                            code.getList().add(value);
+                        }
+                    });
         }
-        return node;
+
+        if (code.getList().isEmpty()) {
+            code.setType("TEXT");
+            WebTemplateInput value = InputHandler.buildWebTemplateInput("value", "TEXT");
+            value.setTerminology(code.getTerminology());
+            node.getInputs().add(value);
+        } else {
+            code.setType(CODED_TEXT);
+        }
+    }
+
+    static String removeSchema(String uri) {
+        if (uri == null) {
+            return null;
+        }
+        int sep = uri.indexOf(':');
+        if (sep < 0) {
+            return uri;
+        }
+        return uri.substring(sep + 1);
     }
 
     private WebTemplateNode buildNode(
@@ -1136,11 +1249,11 @@ public class OPTParser {
         String nodeId = isLocatableNode(cobject) ? cobject.getNodeId() : null;
         if (StringUtils.isNotBlank(nodeId)) {
 
-            Optional<String> expliziteName =
-                    Optional.ofNullable(nameFromTemplate).map(n -> n.label);
+            String name = Optional.ofNullable(nameFromTemplate)
+                    .map(Name::label)
+                    .orElseGet(() ->
+                            termDefinitionMap.get(nodeId).get(defaultLanguage).getValue());
 
-            String name = expliziteName.orElse(
-                    termDefinitionMap.get(nodeId).get(defaultLanguage).getValue());
             node.setName(name);
             node.setId(buildId(name));
             node.setNodeId(nodeId);
@@ -1158,9 +1271,10 @@ public class OPTParser {
 
             node.getLocalizedDescriptions()
                     .putAll(termDefinitionMap.get(nodeId).entrySet().stream()
-                            .collect(Collectors.toMap(Map.Entry::getKey, e -> Optional.ofNullable(
-                                            e.getValue().getDescription())
-                                    .orElse(e.getValue().getValue()))));
+                            .collect(Collectors.toMap(
+                                    Map.Entry::getKey,
+                                    e -> Optional.ofNullable(e.getValue().getDescription())
+                                            .orElse(e.getValue().getValue()))));
 
             Optional.of(termDefinitionMap.get(nodeId))
                     .map(m -> m.get(defaultLanguage))
@@ -1189,14 +1303,14 @@ public class OPTParser {
 
     public static String buildId(String term) {
 
-        String normalTerm = StringUtils.normalizeSpace(term.toLowerCase()
-                        .replaceAll("[^\\p{IsAlphabetic}0-9._\\-]", " ")
-                        .trim())
-                .replace(" ", "_");
-        if (StringUtils.isNumeric(normalTerm.substring(0, 1))) {
-            normalTerm = "a" + normalTerm;
-        }
+        String alnumsCleaned = NON_ALNUM.matcher(term).replaceAll(" ");
+        String normalTerm =
+                StringUtils.normalizeSpace(alnumsCleaned).replace(' ', '_').toLowerCase();
 
-        return normalTerm;
+        if (Character.isDigit(normalTerm.charAt(0))) {
+            return "a" + normalTerm;
+        } else {
+            return normalTerm;
+        }
     }
 }
